[package]
name = "md-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.34"
egui_commonmark = { version = "0.23", features = ["better_syntax_highlighting", "load-images", "svg"] }
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "1"
dirs = "6"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
